@@ -18,42 +18,41 @@ public class PacketInfoPresenter {
     private static final String TCP = "TCP";
     private static final String UDP = "UDP";
 
-    private PcapRepository pcapRepository;
-    private PcapEntry entry;
-    private PacketInfoPresenter.View view;
+    private final PcapEntry entry;
+    private final PacketInfoPresenter.View view;
+
 
     public PacketInfoPresenter(int index, String filterExpression, PacketInfoPresenter.View view) {
-        pcapRepository = PcapRepository.getInstance();
+        PcapRepository pcapRepository = PcapRepository.getInstance();
         entry = pcapRepository.getEntries(filterExpression).get(index);
         this.view = view;
     }
 
     public void displayPacket() {
         try {
-            view.displayArrivalTime(new Long(entry.getArrivalTime()).toString());
-                if (entry.getProtocol() == TCP) {
+            view.displayArrivalTime(Long.valueOf(entry.getArrivalTime()).toString());
+                if (entry.getProtocol().equals(TCP)) {
                     // Display TCP specific info
                     TCPPacket packet = (TCPPacket) entry.getPacket().getPacket(Protocol.TCP);
                     view.displayProtocol(TCP);
-                    view.displayTcp(new Long(packet.getAcknowledgementNumber()).toString(),
-                            new Long(packet.getSequenceNumber()).toString(),
+                    view.displayTcp(Long.valueOf(packet.getAcknowledgementNumber()).toString(),
+                            Long.valueOf(packet.getSequenceNumber()).toString(),
                             displayFlags(packet));
                     view.displaySrc(packet.getSourceIP());
                     view.displayDst(packet.getDestinationIP());
-                    view.displaySrcPort(new Integer(packet.getSourcePort()).toString());
-                    view.displayDstPort(new Integer(packet.getDestinationPort()).toString());
-                } else if (entry.getProtocol() == UDP) {
+                    view.displaySrcPort(Integer.valueOf(packet.getSourcePort()).toString());
+                    view.displayDstPort(Integer.valueOf(packet.getDestinationPort()).toString());
+                } else if (entry.getProtocol().equals(UDP)) {
                     // Display UDP specific info, nothing really there
                     UDPPacket packet = (UDPPacket) entry.getPacket().getPacket(Protocol.UDP);
                     view.displayProtocol(UDP);
                     view.displaySrc(packet.getSourceIP());
                     view.displayDst(packet.getDestinationIP());
-                    view.displaySrcPort(new Integer(packet.getSourcePort()).toString());
-                    view.displayDstPort(new Integer(packet.getDestinationPort()).toString());
-            } else {
-                // TODO implement more protocools
+                    view.displaySrcPort(Integer.valueOf(packet.getSourcePort()).toString());
+                    view.displayDstPort(Integer.valueOf(packet.getDestinationPort()).toString());
+            }  // TODO implement more protocools
                 // Unsupported packet type handling
-            }
+
         } catch (IOException e) {
             Log.e(TAG, e.getMessage(), e);
         }
